--- a/README
+++ b/README
@@ -1,26 +1,20 @@
-nagios-api
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-==========
+# nagios-api
 
 
-NAME
-----
+## NAME
 nagios-api - presents a REST-like JSON interface to Nagios
 
 
-SYNOPSIS
---------
+## SYNOPSIS
 nagios-api [OPTIONS]
 
 
-DEPENDENCIES
-------------
+## DEPENDENCIES
 Dependencies include: diesel, greenlet and python-openssl bindings. These
 should be available via pip/easy_install.
 
 
-DESCRIPTION
------------
+## DESCRIPTION
 This program provides a simple REST-like interface to Nagios. Run this
 on your Nagios host and then sit back and enjoy a much easier, more
 straightforward way to accomplish things with Nagios. You can use the
@@ -28,8 +22,7 @@ bundled nagios-cli, but you may find it easier to write your own system
 for interfacing with the API.
 
 
-USAGE
------
+## USAGE
 Usage is pretty easy:
 
     nagios-api -p 8080 -c /var/lib/nagios3/rw/nagios.cmd \
@@ -40,8 +33,7 @@ the other options, then we will disable that functionality and error to
 clients who request it.
 
 
-HTTP USAGE
-----------
+## HTTP USAGE
 The server speaks JSON. You can either GET data from it or POST data to
 it and take an action. It's pretty straightforward, here's an idea of
 what you can do from the command line:
@@ -64,8 +56,7 @@ be any valid JavaScript object: an int, string, null, bool, hash, list,
 etc etc. What is returned depends on the method being called.
 
 
-NAGIOS-CLI USAGE
-----------------
+## NAGIOS-CLI USAGE
 Once your API server is up and running you can access it through the
 included nagios-cli script. The script now has some decent built-in help
 so you should be able to get all you need:
@@ -76,8 +67,7 @@ The original raw JSON mode is still supported by passing the --raw
 option.
 
 
-OPTIONS
--------
+## OPTIONS
     -p, --port=PORT
 
 Listen on port 'PORT' for HTTP requests.
@@ -414,14 +404,12 @@ Nagios.
 The response indicates if we successfully wrote the command to the log.
 
 
-AUTHOR
-------
+## AUTHOR
 Written by Mark Smith <mark@qq.is> while under the employ of Bump
 Technologies, Inc.
 
 updated By Flip Hess for all the Byte customizations :) 2014
 
 
-COPYING
--------
+## COPYING
 See the LICENSE file for licensing information.
